# Craftrix

./: LICENSE
core/: memory_ptr.h  pubVarAndStruct.h
core/BufList/: bufList.hpp
core/memory/: memoryPool.hpp
doc/: memoryPool.md
example/memoryPool/: memoryPoolexample.cpp
test/memoryPool/: CMakeLists.txt  Makefile  memoryPooltest.cpp
test/tool/: CMakeLists.txt  jsonParserTest.cpp
tools/: jsonParser.h
